Update MainApplication.java